--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#69780F</color>
-    <color name="colorPrimaryTranslucent">#EFD177</color>
+    <color name="colorPrimary">#69780f</color>
+    <color name="colorPrimaryTranslucent">#efd177</color>
     <color name="colorTextOnPrimary">#fff</color>
     <color name="colorTextOnPrimaryTranslucent">#000</color>
     <color name="colorPrimaryDark">#4c5d0b</color>
-    <color name="colorAccent">#EBF26C10</color>
-    <color name="colorWindowBackground">#242424</color>
+    <color name="colorAccent">#f26c10</color>
+    <color name="colorWindowBackground">#10120C</color>
 
  <!--   <color name="colorPrimary">#bf360c</color>
     <color name="colorPrimaryTranslucent">#66bf360c</color>
