--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="button_height">56dp</dimen>
     <dimen name="auth_input_width">280dp</dimen>
     <dimen name="drawer_width">280dp</dimen>
+    <dimen name="tab_corner_radius">8dp</dimen>
 </resources>
