Migrated some Java code to Kotlin

--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -10,7 +10,7 @@
     android:focusable="true"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activities.PasswordResetActivity">
+    tools:context=".ng3.activities.PasswordResetActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,6 +66,7 @@
             android:id="@+id/email_address_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:hint="@string/email_address"
             android:imeOptions="actionDone"
             android:inputType="textEmailAddress"
