--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:focusable="true"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activities.LoginActivity">
+    tools:context=".ng3.activities.LoginActivity">
 
     <ImageView
         android:layout_width="64dp"
@@ -80,6 +80,7 @@
             android:id="@+id/email_address_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:hint="@string/email_address"
             android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
@@ -104,6 +105,7 @@
             android:id="@+id/password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/password"
             android:imeOptions="actionDone"
