--- a/app/src/main/res/layout/activity_permissions_setup.xml
+++ b/app/src/main/res/layout/activity_permissions_setup.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ng2.activities.SetupActivity">
+    tools:context=".ng3.activities.PermissionsSetupActivity">
 
     <TextView
         android:id="@+id/title"
