--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     android:focusable="true"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activities.RegisterActivity">
+    tools:context=".ng2.activities.RegisterActivity">
 
     <ImageButton
         android:id="@+id/back_button"
@@ -58,6 +58,7 @@
             android:id="@+id/email_address_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/email_address"
             android:imeOptions="actionNext"
@@ -83,6 +84,7 @@
             android:id="@+id/password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/password"
             android:imeOptions="actionNext"
@@ -108,6 +110,7 @@
             android:id="@+id/verify_password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/verify_password"
             android:imeOptions="actionDone"
