--- a/app/src/main/res/layout/activity_verify_email.xml
+++ b/app/src/main/res/layout/activity_verify_email.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".activities.VerifyEmailActivity">
+    tools:context=".ng3.activities.VerifyEmailActivity">
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
         android:id="@+id/progress_horizontal"
