A few UI changes

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    tools:context=".activities.ChangePasswordActivity">
+    tools:context=".ng2.activities.ChangePasswordActivity">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/current_password_layout"
@@ -28,6 +28,7 @@
             android:id="@+id/current_password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/current_password"
             android:imeOptions="actionNext"
@@ -54,6 +55,7 @@
             android:id="@+id/new_password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/new_password"
             android:imeOptions="actionNext"
@@ -80,6 +82,7 @@
             android:id="@+id/verify_password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/verify_password"
             android:imeOptions="actionDone"
