--- a/app/src/main/res/layout/activity_change_email_address.xml
+++ b/app/src/main/res/layout/activity_change_email_address.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    tools:context=".activities.ChangeEmailAddressActivity">
+    tools:context=".ng2.activities.ChangeEmailAddressActivity">
 
     <TextView
         android:layout_width="@dimen/auth_input_width"
@@ -65,6 +65,7 @@
             android:id="@+id/password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/password"
             android:imeOptions="actionDone"
