--- a/app/src/main/res/layout/activity_delete_account.xml
+++ b/app/src/main/res/layout/activity_delete_account.xml
@@ -8,17 +8,20 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    tools:context=".activities.DeleteAccountActivity">
+    tools:context=".ng2.activities.DeleteAccountActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" android:textStyle="bold"
-        android:layout_marginVertical="32dp" android:textColor="#f00"
-        android:layout_marginHorizontal="16dp" android:textSize="18sp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="32dp"
         android:gravity="center"
         android:text="@string/important_delete_prompt"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColor="#f00"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="@dimen/auth_input_width"
@@ -47,6 +50,7 @@
             android:id="@+id/password_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
             android:focusableInTouchMode="true"
             android:hint="@string/password"
             android:imeOptions="actionDone"
