--- a/app/src/main/res/values/ng3_strings.xml
+++ b/app/src/main/res/values/ng3_strings.xml
@@ -25,4 +25,5 @@
     <string name="session_id">Session ID</string>
     <string name="start_recording">Start\nRecording</string>
     <string name="start_detecting">Start\nDetecting</string>
+    <string name="important_delete_prompt"><u>IMPORTANT</u>\nThis operation is NOT reversible!</string>
 </resources>
