--- a/app/src/main/res/layout/activity_home_ng3.xml
+++ b/app/src/main/res/layout/activity_home_ng3.xml
@@ -6,92 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ng3.activities.HomeActivityNg3">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <de.eloc.eloc_control_panel.ng3.widgets.ElocAppBar
+        android:id="@+id/eloc_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="16dp">
-
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/actionbar">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <Space
-                    android:id="@+id/spacer"
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:viewBindingIgnore="true" />
-
-                <ImageButton
-                    android:id="@+id/settings_button"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:background="@android:color/transparent"
-                    android:contentDescription="@string/open_settings"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/settings_outline"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/spacer"
-                    app:tint="@color/actionbar_icon" />
-
-                <View
-                    android:id="@+id/connection_status_icon"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_marginHorizontal="16dp"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="@color/connected"
-                    app:layout_constraintBottom_toBottomOf="@id/settings_button"
-                    app:layout_constraintEnd_toStartOf="@id/settings_button"
-                    app:layout_constraintTop_toTopOf="@id/settings_button" />
-
-                <TextView
-                    android:id="@+id/connection_status_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/connected"
-                    app:layout_constraintBottom_toBottomOf="@id/connection_status_icon"
-                    app:layout_constraintEnd_toStartOf="@id/connection_status_icon"
-                    app:layout_constraintTop_toTopOf="@id/connection_status_icon" />
-
-                <TextView
-                    android:id="@+id/eloc_name_text_view"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAppearance="@style/TextAppearance.Eloc.HeadlineSmall"
-                    app:layout_constraintEnd_toStartOf="@id/connection_status_label"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/settings_button"
-                    tools:text="ELOC224" />
-
-                <TextView
-                    android:id="@+id/user_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/user_label"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="@id/eloc_name_text_view"
-                    app:layout_constraintTop_toBottomOf="@id/eloc_name_text_view"
-                    tools:text="USER: Tester" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/user_label"
-                    tools:viewBindingIgnore="true" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.appcompat.widget.Toolbar>
-    </com.google.android.material.appbar.AppBarLayout>
+        android:layout_height="wrap_content" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
