--- a/app/src/main/res/values/ng3_strings.xml
+++ b/app/src/main/res/values/ng3_strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">ELOC Control Panel</string>
     <string name="eloc_user">USER: %s</string>
     <string name="gauge_gps_distance">%dm</string>
     <string name="gauge_gps_long_distance">&gt;%d</string>
@@ -25,5 +26,8 @@
     <string name="session_id">Session ID</string>
     <string name="start_recording">Start\nRecording</string>
     <string name="start_detecting">Start\nDetecting</string>
+    <string name="scanner">Scanner</string>
     <string name="important_delete_prompt"><u>IMPORTANT</u>\nThis operation is NOT reversible!</string>
+    <string name="open_drawer_menu">Open drawer menu</string>
+    <string name="go_back">Go back</string>
 </resources>
