--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -77,10 +77,22 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@id/instructions_button" />
 
+            <Button app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="wrap_content" android:id="@+id/test_button"
+                android:layout_height="wrap_content" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@id/test_button" app:layout_constraintTop_toTopOf="parent"
+                android:layout_height="wrap_content">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/command_box" />
+            </com.google.android.material.textfield.TextInputLayout>
+
             <ScrollView
                 android:id="@+id/scroll_view"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="0dp" android:layout_marginTop="64dp"
                 android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toTopOf="@id/recBtn"
                 app:layout_constraintTop_toTopOf="parent">
