--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:menu_button_position="right"
+            app:show_user_name="true"
             app:title="@string/scanner" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
